--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "commonjs",
     "lib": [
       "es2020",
-      "dom"
+      "dom",
+      "ES2021.String"
     ],
     "declaration": true,
     "strict": true,
