--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "aws-cdk-lib": "2.123.0",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "jq": "^1.7.2",
+    "source-map-support": "^0.5.21",
+    "uglify-js": "^3.17.4"
   }
 }
